# AI2022HW

./: 对于NLP领域的发展研究报告.odt
hw1/: hw1.ipynb  主观贝叶斯实验报告.doc
hw1/.ipynb_checkpoints/: hw1-checkpoint.ipynb
hw2/: CMakeLists.txt  classes.h  fun.cpp  main  main.cpp  重排九宫格实验报告.doc
hw2/src/: classes.h  fun.cpp  main.cpp  profiler.h  state.cpp  state.h
